# RVCS

./: Cargo.toml  LICENSE  README.md
scripts/: install.sh
src/: error.rs  lib.rs  main.rs
src/commands/: add.rs  branch.rs  checkout.rs  commit.rs  diff.rs  init.rs  log.rs  merge.rs  mod.rs  reset.rs  revert.rs  rm.rs  stash.rs  status.rs  switch.rs  tag.rs
src/core/: blob.rs  commit.rs  index.rs  mod.rs  object.rs  repository.rs  tree.rs
src/utils/: color.rs  hash.rs  helpers.rs  mod.rs
tests/: integration_tests.rs
