[package]
name = "rvcs"
version = "0.3.0"
edition = "2021"
description = "A locally running CLI-first Version Control System"

[[bin]]
name = "rvcs"
path = "src/main.rs"

[dependencies]
sha1 = "0.10"
flate2 = "1.0"
hex = "0.4"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
